# Fund-Manager-Web-Scraper

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  linkedin_overrides.json  main.py  phase4_enrich.py  requirements.txt
context/: data-schema.md  pipeline-phases.md  project-overview.md
data/: amc_page_inventory.json  amc_seed_list.json  ifsca_fund_management.json  pms_managers.csv  sebi_mutual_funds.json
data/csv/: ifsca_entities.csv  managers_located.csv
docker/: .env.example  docker-compose.yml
docker/searxng/: settings.yml
docs/: high-level-flowchart.md  high-level-sequence.md  low-level-phase1-flowchart.md  low-level-phase1-sequence.md
setup/: pyproject.toml
src/: ifsca_entities.py  sebi_mutual_funds.py
web/public/data/: managers.json  manifest.json  places.json
